# comfyui-isolation

./: README.md  pyproject.toml
.github/workflows/: publish.yml
examples/basic_node/: comfyui_isolation_reqs.toml  nodes.py  worker.py
examples/decorator_node/: nodes.py
src/comfy_env/: __init__.py  cli.py  decorator.py  errors.py  install.py  pixi.py  wheel_sources.yml
src/comfy_env/env/: config.py  config_file.py  detection.py
src/comfy_env/ipc/: __init__.py  bridge.py  transport.py
src/comfy_env/stubs/: folder_paths.py
src/comfy_env/workers/: __init__.py  torch_mp.py  venv.py
src/comfyui_envmanager/: __init__.py  cli.py  install.py  registry.py  resolver.py
src/comfyui_envmanager/env/: config_file.py
src/comfyui_isolation/: __init__.py  decorator.py  runner.py
src/comfyui_isolation/env/: __init__.py  config.py  config_file.py  detection.py  manager.py
src/comfyui_isolation/ipc/: __init__.py  bridge.py  protocol.py
