[project]
name = "comfyui-isolation"
version = "0.1.0"
description = "Process isolation for ComfyUI custom nodes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Andrea Pozzetti"}
]
keywords = ["comfyui", "isolation", "venv", "process", "subprocess"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/PozzettiAndrea/comfyui-isolation"
Repository = "https://github.com/PozzettiAndrea/comfyui-isolation"
Issues = "https://github.com/PozzettiAndrea/comfyui-isolation/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/comfyui_isolation"]

[tool.ruff]
line-length = 100
target-version = "py310"
