[project]
name = "comfyui-envmanager"
version = "0.0.2"
description = "Environment management for ComfyUI custom nodes - CUDA wheel resolution and process isolation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Andrea Pozzetti"}
]
keywords = ["comfyui", "cuda", "wheels", "environment", "isolation", "venv", "process"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "tomli>=2.0.0; python_version < '3.11'",  # TOML parsing (built-in tomllib for 3.11+)
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/PozzettiAndrea/comfyui-envmanager"
Repository = "https://github.com/PozzettiAndrea/comfyui-envmanager"
Issues = "https://github.com/PozzettiAndrea/comfyui-envmanager/issues"

[project.scripts]
comfy-env = "comfyui_envmanager.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/comfyui_envmanager"]

[tool.ruff]
line-length = 100
target-version = "py310"
